# mres

./: README.md  pyproject.toml
src/indicators/: indicators.py  simple.py
src/indicators/templates/: heat_indicators_example.csv  wind_indicators_template.csv
src/mres/: archetype_functions.py  config.py  main.py
src/mres/indicators/: __init__.py  indicators.py  simple.py
src/mres/indicators/templates/: flood_indicators_template.csv  heat_indicators_template.csv
tests/mres/data/: exposure.json  flood_indicators.csv  heat_indicators.csv  seismic_indicators.csv  wind_indicators.csv
tests/mres/data-archetype_functions/: exposure.json
tests/mres/indicators/: scratch.py  test_simple.py
